[package]
name = "scratch-test-report"
version = "0.1.0"
edition = "2024"

[dependencies]
derive-getters = "0.5.0"
derive_more = { version = "2.1.1", features = ["debug", "deref", "display", "eq", "from", "into"] }
either = "1.16.0"
itertools = "0.14.0"
log = "0.4.32"
pastey = "0.2.3"
schemars = { version = "1.2.1", optional = true }
utoipa = { version = "5.5.0", features = ["rc_schema"], optional = true }
serde = { version = "1.0", features=["derive"], optional = true }
thiserror = "2.0.18"
implicit-clone = {version = "0.6.0", default-features = false}

[dependencies.svalue]
git = "https://github.com/Marcel-Scherzinger/scratch-test-value"
package = "scratch-test-value"

[dependencies.smodel]
git = "https://github.com/Marcel-Scherzinger/scratch-test-model"
package = "scratch-test-model"
default-features = false

[dependencies.sinterpreter]
git = "https://github.com/Marcel-Scherzinger/scratch-test-interpreter"
package = "scratch-test-interpreter"
default-features = false

[dependencies.sgraph]
git = "https://github.com/Marcel-Scherzinger/scratch-test-graph-analysis"
package = "scratch-test-graph-analysis"

[features]
serde = ["dep:serde", "svalue/serde", "sinterpreter/serde", "either/serde", "implicit-clone/serde"]
schemars = ["dep:schemars", "smodel/schemars", "svalue/schemars", "sinterpreter/schemars"]
utoipa = ["dep:utoipa", "smodel/utoipa", "svalue/utoipa", "sinterpreter/utoipa"]
thread-share = []

